@@ -1005,3 +1005,7 @@
 2013-02-12  ChunEon Park (Hermet)
 
         * replace elm_object_domain_translatable_text_part_set(), elm_object_translatable_text_part_get() with elm_object_domain)translatable_part_text_set(), elm_object_translatable_part_text_get().
+
+2013-02-14  ChunEon Park (Hermet)
+
+        * added 2 APIs elm_object_orientation_mode_disabled_set(), elm_object_orientation_mode_disabled_get()
